--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "test": "ng test",
     "deploy": "npm run build && firebase deploy",
     "deploy:hosting": "npm run build && firebase deploy --only hosting",
-    "deploy:rules": "firebase deploy --only firestore:rules,storage:rules"
+    "deploy:rules": "firebase deploy --only firestore:rules,storage:rules",
+    "emulators": "firebase emulators:start",
+    "emulators:persist": "firebase emulators:start --export-on-exit=./emulator-data --import=./emulator-data"
   },
   "dependencies": {
     "@angular/animations": "^20.0.0",
